# rime-ls

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: build.yml  docker-publish.yml  release.yml
doc/: helix.md  nvim-with-blink.md  nvim-with-cmp.md  nvim.md  vim.md  vscode.md  zed.md
src/: config.rs  consts.rs  input.rs  lib.rs  lsp.rs  main.rs  rime.rs  utils.rs
