[package]
name = "rime_ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librime-sys = { version = "0.1.0", git = "https://github.com/lotem/librime-sys" }
dashmap = "5.4.0"
regex = "1.7.1"
ropey = "1.5.1"
tokio = { version = "1.24.1", features = ["full"] }
tower-lsp = "0.17.0"
