[package]
name = "rime_ls"
version = "0.1.3"
edition = "2021"
authors = ["ZilcH40 <wlh233@live.com>"]
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librime-sys = { version = "0.1.0", git = "https://github.com/lotem/librime-sys" }
dashmap = "5.4.0"
regex = "1.7.1"
ropey = "1.5.1"
tokio = { version = "1", features = ["io-util", "io-std", "macros", "rt-multi-thread", "net", "signal"] }
tower-lsp = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
directories = "4.0.1"
ouroboros = "0.15.5"
thiserror = "1.0.38"
once_cell = "1.17.0"

[features]
default = []
no_log_dir = [] # for librime < 1.6

[profile.release]
strip = true
lto = true
