[package]
name = "rime_ls"
version = "0.4.0"
edition = "2021"
authors = ["ZilcH40 <wlh233@live.com>"]
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librime-sys = { version = "0.1.0", git = "https://github.com/lotem/librime-sys" }
dashmap = "5.5.3"
regex = "1.10.0"
ropey = "1.6.0"
tokio = { version = "1", features = ["io-util", "io-std", "macros", "rt-multi-thread", "net", "signal"] }
tower-lsp = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
directories = "5.0.1"
ouroboros = "0.18.0"
thiserror = "1.0.49"
once_cell = "1.18.0"

[features]
default = []
no_log_dir = [] # for librime < 1.6

[profile.release]
strip = true
lto = true
codegen-units = 1
